k8s/redis.yml
# ------------------- Redis Deployment ------------------- #
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: kubernetes-redis
  name: kubernetes-redis
  namespace: kube-public
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: kubernetes-redis
  template:
    metadata:
      labels:
        k8s-app: kubernetes-redis
    spec:
      containers:
      - name: kubernetes-redis
        image: redis:3.2
        ports:
        - containerPort: 6379 
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule

---
# ------------------- Redis Service ------------------- #
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-redis
  name: kubernetes-redis
  namespace: kube-public
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    k8s-app: kubernetes-redis
